performace-view: Fix a double border when folded
This adds a separator and drops the sidebar's border, so the separator
isn't part of the sidebar and is hence not visible when folded.

--- a/data/interface/adwaita.css
+++ b/data/interface/adwaita.css
@@ -177,3 +177,7 @@ dzlstacklist list.stack-header {
     margin: 0px;
     border:none;
 }
+
+leaflet > box.sidebar {
+    border: none;
+}
